# secure-rust-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  WARP.md  docker-compose.yml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/db/: mod.rs  user_repository.rs
src/handlers/: api.rs  auth.rs
src/middleware/: auth.rs  rate_limit.rs
src/models/: user.rs
src/utils/: auth.rs
